Integrating index updates into regular routine

--- a/forschbibcomparison/Untitled.ipynb
+++ b/forschbibcomparison/Untitled.ipynb
@@ -39,16 +39,16 @@
     "logging.basicConfig(filename='process.log', level=logging.DEBUG)\n",
     "print(\"##################################\")\n",
     "print(\"Wahl aus folgenden Optionen:\")\n",
-    "print(\"##################################\\n\\n\\n\")\n",
-    "print(\" 1 - Scopus-Zeitschriftenliste auf aktuellem Stand laden\")\n",
-    "print(\" 2 - SCIE-Zeitschriftenliste auf aktuellem Stand laden\")\n",
-    "print(\" 3 - SSCI-Zeitschriftenliste auf aktuellem Stand laden\\n\")\n",
+    "print(\"##################################\\n\")\n",
+    "# print(\" 1 - Scopus-Zeitschriftenliste auf aktuellem Stand laden\")\n",
+    "# print(\" 2 - SCIE-Zeitschriftenliste auf aktuellem Stand laden\")\n",
+    "# print(\" 3 - SSCI-Zeitschriftenliste auf aktuellem Stand laden\\n\")\n",
     "# print(\" 4 - Vergleiche Bibsonomy-Inhalte (input-Verzeichnis) mit Scopus- und SciE-Liste - 1 zu 1 / Stringmatch\")\n",
     "print(\" 5 - Update der Mappingtabelle\")\n",
     "print(\"     Zeitschriftentitel aus .bib-Datei (input-Verzeichnis) zum Abgleich mit Scopus-, SciE- und SSCIListe\")\n",
     "print(\" 6 - Vergleiche Bibsonomy-Inhalte (input-Verzeichnis) mit Scopus-, SciE- und SSCIListe - strukturiertes Mapping inkl. Mappingtabelle - bibtex-Ausgabe\")\n",
     "\n",
-    "print(\" 7 - Erstelle Matchingtabelle der Forschbibzeitschriften auf Scopus, SciE und SSCI - Output in csv\")\n",
+    "# print(\" 7 - Erstelle Matchingtabelle der Forschbibzeitschriften auf Scopus, SciE und SSCI - Output in csv\")\n",
     "\n",
     "\n",
     "print(\"\\n 0 - Programm beenden\")\n",
@@ -63,16 +63,19 @@
     "    print(\"Aktualisiere Scopus-Zeitschriftenliste ...\")\n",
     "    indexLists.putScopusJournalListOnDisk()\n",
     "    print(\"Laufzeit: \", time.time() - start_time)\n",
+    "    sys.exit()\n",
     "elif choice == \"2\":\n",
     "    start_time = time.time()\n",
     "    print(\"Aktualisiere SCIE-Zeitschriftenliste ...\")\n",
     "    indexLists.putSCIJournalListOnDisk()\n",
     "    print(\"Laufzeit: \", time.time() - start_time)\n",
+    "    sys.exit()\n",
     "elif choice == \"3\":\n",
     "    start_time = time.time()\n",
     "    print(\"Aktualisiere SSCI-Zeitschriftenliste ...\")\n",
     "    indexLists.putSSCIJournalListOnDisk()\n",
     "    print(\"Laufzeit: \", time.time() - start_time)\n",
+    "    sys.exit()\n",
     "elif choice == \"4\":\n",
     "    start_time = time.time()\n",
     "    print(\"Lade input-Verzeichnis ...\")\n",
@@ -84,10 +87,22 @@
     "    base.compareJournalEntries(bibsonomyInputFileString, scopusJournalList, sciJournalList, \"simple\")\n",
     "    print(\"Fertig! Das Ergebnis des Vergleichs liegt im output-Verzeichnis!\")\n",
     "    print(\"Laufzeit: \", time.time() - start_time)\n",
+    "    sys.exit()\n",
     "\n",
     "elif choice == \"5\":\n",
     "    start_time = time.time()\n",
-    "    print(\"Lade input-Verzeichnis ...\")\n",
+    "    base.checkForFolders()\n",
+    "    \n",
+    "    print(\"Aktualisiere Scopus-Zeitschriftenliste ...\")\n",
+    "    indexLists.putScopusJournalListOnDisk()\n",
+    "    \n",
+    "    print(\"Aktualisiere SCIE-Zeitschriftenliste ...\")\n",
+    "    indexLists.putSCIJournalListOnDisk()\n",
+    "    \n",
+    "    print(\"Aktualisiere SSCI-Zeitschriftenliste ...\")\n",
+    "    indexLists.putSSCIJournalListOnDisk()\n",
+    "    \n",
+    "    print(\"Lade input- und mapping Verzeichnis ...\")\n",
     "    bibsonomyInputFileString = base.readFileFromDirectoryToString(config.inputFileLocation)\n",
     "    scopusJournalList = base.getScopusJournalList(config.scopusFileListFileNameOnDisk)\n",
     "    sciJournalList = base.getSciJournalList(config.sciFileListNameOnDiskPrefix)\n",
@@ -109,10 +124,12 @@
     "    base.compareJournalEntriesAndPutThemToBibtextFile(bibsonomyInputFileString, scopusJournalList, sciJournalList, ssciJournalList)\n",
     "    print(\"Fertig! Das Ergebnis der Anreicherung liegt im output-Verzeichnis!\")\n",
     "    print(\"Laufzeit: \", time.time() - start_time + \" Sekunden\")\n",
+    "    sys.exit()\n",
     "elif choice == \"7\":\n",
     "    start_time = time.time()\n",
     "    base.checkMappingFileMatches()\n",
     "    print(\"Laufzeit: \", time.time() - start_time)\n",
+    "    sys.exit()\n",
     "\n",
     "elif choice == \"0\":\n",
     "    print(\"Programm beendet!\")\n",
